--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.1a",
   "description": "A ray-tracer program for displaying 3d scenes",
   "main": "index.js",
-  "type": "module",
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "html": "npx parcel ./src/html-tests/index.html --dist-dir ./parcel-dist --no-cache"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
