--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.2",
     "jest": "^29.2.1",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
