--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x-tracer",
   "version": "0.0.1a",
   "description": "A ray-tracer program for displaying 3d scenes",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "test": "jest",
@@ -18,6 +18,7 @@
     "jest-ts-webcompat-resolver": "^1.0.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.17",
     "typescript": "^4.8.4"
   }
 }
