--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es6",
-        "watch": true,
+        "watch": false,
         "lib": ["dom", "es2017"],
         "outDir": "dist",
         "sourceMap": true,
